# babbelaar

./: .gitignore  Cargo.toml  Makefile  README.md  test.bab
.github/workflows/: bouwen-linux-ubuntu-amd64.yaml  bouwen-macos-aarch64.yaml  bouwen-macos-amd64.yaml  bouwen-windows-amd64.yaml  release.yaml  rust.yaml
babbelaar/: Cargo.toml
babbelaar/src/: attribute.rs  config.rs  constants.rs  context.rs  expression.rs  interpreter.rs  keyword.rs  lexer.rs  lib.rs  parser.rs  semantics.rs  statement.rs  string.rs  structure.rs  token.rs  tree.rs  type_.rs  util.rs  value.rs
babbelaar/src/ast/: attribute.rs  expression.rs  mod.rs  parser.rs  statement.rs  structure.rs  tree.rs
babbelaar/src/builtin/: array.rs  functions.rs  methods.rs  mod.rs  pointer.rs  types.rs
babbelaar/src/lexer/: keyword.rs  lexer.rs  mod.rs  punctuator.rs  template_string_token.rs  token.rs  token_kind.rs
babbelaar/src/semantics/: analysis.rs  analyzer.rs  context.rs  diagnostic.rs  extension.rs  function.rs  function_reference.rs  interface.rs  local.rs  method.rs  mod.rs  reference.rs  related.rs  scope.rs  structure.rs  structure_or_interface.rs  type_.rs  value.rs
babbelaar/src/util/: babbelaar_code_action.rs  babbelaar_code_action_type.rs  babbelaar_command.rs  babbelaar_fix_kind.rs  documentation_provider.rs  file_edit.rs  file_id.rs  file_location.rs  file_range.rs  lsp_completion.rs  mod.rs  option_ext.rs  ranged.rs  source_code.rs  str_ext.rs  str_iter_ext.rs  string.rs  value.rs
babbelaar/tests/: simple.rs
babbib/: Babbelaar.toml  Slinger.bab  schrijf.bab
builtin/: Cargo.toml
builtin/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  cranelift_backend.rs  error.rs  interpreter.rs  lib.rs  memory.rs  pipeline.rs  types.rs
compiler/src/analysis/: cfg.rs  mod.rs
compiler/src/backend/: abstract_register.rs  data_section.rs  link.rs  llvm.rs  mod.rs  object.rs  relocation.rs  target_instruction.rs
compiler/src/backend/aarch64/: addressing_mode.rs  branch_location.rs  code_generator.rs  condition_code.rs  fixup.rs  function_characteristics.rs  instruction.rs  instruction_selector.rs  mod.rs  optimizer.rs  register.rs  stack_allocator.rs
compiler/src/backend/amd64/: address.rs  code_generator.rs  condition_code.rs  fixup.rs  function_characteristics.rs  instruction.rs  instruction_selector.rs  mod.rs  register.rs
compiler/src/backend/register_allocation/: allocatable_register.rs  allocator.rs  life_analysis.rs  mod.rs  register_lifetime.rs
compiler/src/ir/: function.rs  function_argument.rs  function_attribute.rs  function_builder.rs  function_parameter.rs  instruction.rs  mod.rs  operand.rs  program.rs  program_builder.rs  structure.rs  structure_builder.rs
compiler/src/memory/: stack_allocator.rs
compiler/src/optimization/: code_motion.rs  dead_code.rs  mod.rs  register.rs  strength.rs  string.rs
compiler/src/os/: command.rs  linker_path.rs  mod.rs  ntstatus.rs  signal.rs
compiler/src/os/linux/: ldd.rs  linker.rs  mod.rs
compiler/src/os/macos/: mod.rs
compiler/src/os/windows/: mod.rs  vs.rs
compiler/tests/: aarch64.rs  integration.rs  optimization.rs  pipeline.rs  x86_64.rs
example-workspace/: Doorloper.bab  Fout.bab  HTTP.bab  IU.bab  Lijst.bab  Persoon.bab  persoon.bab  test.bab
interpreter/: Cargo.toml
interpreter/src/: data.rs  debug_adapter.rs  debugger.rs  error.rs  expression.rs  ffi.rs  interpreter.rs  keyword.rs  lexer.rs  lib.rs  logger.rs  main.rs  parser.rs  scope.rs  semantics.rs  signal.rs  statement.rs  token.rs  type_.rs  util.rs  value.rs
interpreter/src/builtin/: functions.rs  methods.rs  mod.rs  types.rs
interpreter/tests/: debug_adapter.bab  debug_adapter.rs
lsp/: Cargo.toml
lsp/src/: actions.rs  backend.rs  commands.rs  completions.rs  configuration.rs  context.rs  conversion.rs  error.rs  format.rs  hints.rs  logger.rs  main.rs  symbolization.rs
lsp/tests/: edit_file.rs
playground/: index.html
playground-api/: Cargo.toml
playground-api/src/: lib.rs
src/: expression.rs  interpreter.rs  keyword.rs  lexer.rs  main.rs  parser.rs  scope.rs  statement.rs  token.rs  value.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: g32.rs  slinger.rs  stdout.rs
tools/: dev-tmux.sh
tools/Babbelaar.VisualStudio/: .editorconfig  Babbelaar.VisualStudio.sln
tools/Babbelaar.VisualStudio/Babbelaar.VisualStudio/: Babbelaar.VisualStudio.csproj  BabbelaarLanguageServerProvider.cs  ExtensionEntrypoint.cs
tools/Babbelaar.VisualStudio/Babbelaar.VisualStudio/.vsextension/: string-resources.json
tools/platform/: macos-symbols.txt  update-macos-symbols.py
tools/vscode/: .vscodeignore  README.md  package-lock.json  package.json
tools/vscode/assets/free-icons/: README.txt
tools/vscode/snippets/: babbelaar.json
tools/vscode/src/: babbelaarContext.ts  babbelaarLsp.ts  commands.ts  debugAdapter.ts  downloadBabbelaar.ts  extension.ts  logger.ts  tasks.ts
tools/vscode/syntaxes/: babbelaar.tmGrammar.json
vscode/: CHANGELOG.md  README.md  package.json
vscode/snippets/: babbelaar.json
vscode/src/: extension.ts
vscode/syntaxes/: bab.tmGrammar.json  babbelaar.tmGrammar.json  language-config.json
