[workspace.package]
edition = "2021"
version = "0.0.3"

[workspace]
resolver = "2"
members = [
    "babbelaar",
    "builtin",
    "compiler",
    "interpreter",
    "lsp", "playground-api",
    "tests",
]
default-members = ["interpreter"]

[workspace.dependencies]
thiserror = "2"
strum = { version = "0.26", features = ["derive"] }
log = "0.4"
object = { version = "0.36", features = ["write"] }

dap = "0.4.1-alpha1"
libloading = "0.8"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1"

dashmap = "6"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = { git = "https://github.com/babbelaar/tower-lsp.git", rev = "cce815536edb201b5082b8310227796ec40e09d4" }
url = "2"
env_logger = "0.11"
