[package]
name = "babbelaar-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
babbelaar = { path = "../babbelaar" }
babbelaar-builtin = { path = "../builtin" }

log.workspace = true
object.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest = "0.22"
region = "3"
signal-hook = "0.3"
temp-dir = "0.1"
pretty_assertions = "1"
