[package]
name = "babbelaar-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
babbelaar = { path = "../babbelaar" }

cranelift = "0.124.1"
cranelift-codegen = { version = "0.124.1", features = ["x86", "arm64"] }
target-lexicon = "0.13.2"

log.workspace = true
object.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
region = "3"
signal-hook = "0.3"
temp-dir = "0.1"
pretty_assertions = "1"
env_logger.workspace = true
