[package]
name = "babbelaar-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
dap = "0.4.1-alpha1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }

babbelaar = { path = "../babbelaar" }
# babbelaar-compiler = { path = "../compiler" }
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
rstest = "0.22"
