[package]
name = "babbelaar-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
dap.workspace = true
thiserror.workspace = true
strum.workspace = true
libloading.workspace = true
log.workspace = true

babbelaar = { path = "../babbelaar" }
babbelaar-compiler = { path = "../compiler" }
clap.workspace = true
colored.workspace = true

[dev-dependencies]
rstest = "0.23"
