[package]
name = "babbelaar-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
strum.workspace = true
libloading.workspace = true
log.workspace = true

babbelaar = { path = "../babbelaar" }
babbelaar-compiler = { path = "../compiler" }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
toml.workspace = true

[dev-dependencies]
rstest.workspace = true
