[package]
name = "babbelaar-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
dashmap = "6"
log = "0.4"
thiserror = "1"
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-lsp = { git = "https://github.com/babbelaar/tower-lsp.git", rev = "cce815536edb201b5082b8310227796ec40e09d4" }
url = "1"

babbelaar = { path = "../babbelaar" }
babbelaar-interpreter = { path = "../interpreter" }


[dev-dependencies]
rstest = "0.23"
rand = "0.8"
anyhow = "1"
