[package]
name = "babbelaar-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
dashmap.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
url.workspace = true

babbelaar = { path = "../babbelaar" }


[dev-dependencies]
rstest.workspace = true
rand = "0.8"
anyhow = "1"
